* Fix: Fixed bug with 2FA not properly handling email address login. * Fix: Show logins/logouts when Live Traffic is disabled. * Fix: Fixed bug with PCRE versions < 7.0 (repeated subpattern is too long). * Fix: Now able to delete whitelisted URL/params containing ampersands and non-UTF8 characters. * Improvement: Reduced 2FA activation code to expire after 30 days. * Improvement: Live Traffic now only shows verified Googlebot under Google Crawler filter for new visits. * Improvement: Adjusted permissions on Firewall log/config files to be 0640. * Fix: Fixed false positive from Maldet in the wfConfig table during the scan.
git-svn-id: https://plugins.svn.wordpress.org/wordfence/trunk@1413080 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/main.css
+++ b/css/main.css
@@ -1032,3 +1032,13 @@ tr.wf-table-filters {
 tr.wf-table-filters input {
 	max-width: 140px;
 }
+
+#wordfenceLiveActivityDisabled {
+	background: #fff;
+	border-left: 4px solid #ffb900;
+	-webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .1);
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .1);
+	margin-bottom: 12px;
+	padding: 1px 13px;
+	max-width: 900px;
+}
